# nrf-ios-beacon

./: README.md  capacitor.config.ts  index.html  package-lock.json  package.json  tailwind.config.ts
Beaconublock/: Beaconublock.kicad_pcb  Beaconublock.kicad_prl  Beaconublock.kicad_pro  Beaconublock.kicad_sch  fp-info-cache  ~_autosave-Beaconublock.kicad_pcb.lck
src/: index.css
src/components/: BME280Charts.tsx  BluetoothScanner.tsx  DataDisplay.tsx  DemoDevice.tsx  DeviceConnection.tsx
src/nrf-code/: CMakeLists.txt  README.md  bme280_service.c  bme280_service.h  main.c  mpu6050_service.c  mpu6050_service.h  my_lbs.c  my_lbs.h  nrf52833dk_nrf52833.overlay  prj.conf  sample.yaml
src/pages/: Index.tsx
